Jvm测试代码整理